feat: add detail pages

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,3 +2,14 @@ html * {
   --un-border-opacity: 1;
   border-color: rgba(156, 163, 175, var(--un-border-opacity));
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300&display=swap');
+*{
+  font-family: 'Fira Code', monospace;
+}
+
+table,
+th,
+td {
+  padding: 0.5rem;
+}
